# ichipro-api

./: .gitignore  Dockerfile  README.md  compose.yml  go.mod  go.sum  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: master_ichipro.yml
api/cmd/: main.go
api/internal/controller/system/: handler.go
api/internal/controller/user/: handler.go
api/internal/presenter/: server.go
src/ichipro_api/: __init__.py  main.py
src/ichipro_api/db/: __init__.py  db.py  migrate.py
src/ichipro_api/router/user/: user.py
