[project]
name = "ichipro-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "m-tsuru", email = "private@sasakulab.com" }
]
dependencies = [
    "fastapi[all]>=0.110.1",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ichipro_api"]
