[project]
name = "ichipro-api"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "m-tsuru", email = "private@sasakulab.com" }]
dependencies = [
    "fastapi[all]>=0.110.1",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = { cmd = "python3 src/ichipro_api/main.py", env = { db_dialect = "postgresql", username = "postgres", password = "password", host = "db", database = "ichipro-dev" } }
dev_init = { cmd = "python3 src/ichipro_api/db.py", env = { db_dialect = "postgresql", username = "postgres", password = "password", host = "db", database = "ichipro-dev" } }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ichipro_api"]
